# wiggle-soil-temperature

./: README.md  pyproject.toml  requirements.txt
src/wiggle_soil_temperature/: install.py  main.py  test.py
src/wiggle_soil_temperature/service/: wiggle-soil-temperature.service
