[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiggle_soil_temperature"
version = "0.0.1"
authors = [
  { name="Studio Rabota" },
]
description = "WiggleSoilTemperature - Track WiggleBin's soil temperature"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
wiggle-soil-temperature = "wiggle_soil_temperature.main:main"
wiggle-soil-temperature-install = "wiggle_soil_temperature.install:install"

[project.urls]
"Homepage" = "https://github.com/wiggle-bin/wiggle-soil-temperature.git"